"""Add variant custom pricing table

Revision ID: c1ddc09cc1dd
Revises: d4dd83f66239
Create Date: 2025-01-26 11:32:28.385153

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'c1ddc09cc1dd'
down_revision: Union[str, None] = 'd4dd83f66239'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('custom_prices',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('variant_id', sa.Uuid(), nullable=False),
    sa.Column('dependent_variant_id', sa.Uuid(), nullable=False),
    sa.Column('custom_price', sa.Float(), nullable=False),
    sa.ForeignKeyConstraint(['dependent_variant_id'], ['part_variants.id'], ),
    sa.ForeignKeyConstraint(['variant_id'], ['part_variants.id'], ),
    sa.PrimaryKeyConstraint('id', 'variant_id', 'dependent_variant_id')
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('custom_prices')
    # ### end Alembic commands ###
